Fix header overflow and remove extra sidebar height

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html,
 body,
 #root,
@@ -21,15 +25,18 @@ main {
 }
 
 .App-header {
+  position: sticky;
+  top: 0;
   background-color: #282c34;
-  height: 3.25rem;
+  height: 3.75rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font: 2rem 'Hack', monospace;
   color: white;
-  border-bottom: 3px solid rgb(0, 217, 255)
+  border-bottom: 3px solid rgb(0, 217, 255);
+  min-width: max-content;
 }
 
 .App-link {
